--- a/css/style.css
+++ b/css/style.css
@@ -69,9 +69,8 @@ img
 
 .image-full
 {
-	display: block;
-	width: 100%;
-	margin: 0 0 2em 0;
+	float: right;
+	margin: 0px 0px 0px 10px;
 }
 
 img.border {
