--- a/css/style.css
+++ b/css/style.css
@@ -93,7 +93,7 @@ img.aligncenter {
 #wrapper {
 	margin: 0 auto;
 	padding: 0;
-	background: url(images/img03.gif) no-repeat center top;
+	/*background: url(images/img03.gif) no-repeat center top;*/
 }
 
 /* Header */
