--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -62,7 +62,7 @@
 						<li>
 							<h2>Maths</h2>
                             <ul>
-                                {% for post in site.categories.maths %}
+                                {% for post in site.categories.maths limit:7 %}
                                     <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
                                 {% endfor %}
 							</ul>
@@ -79,7 +79,7 @@
 						<li>
 							<h2>Astronomy</h2>
                             <ul>
-                                {% for post in site.categories.astronomy %}
+                                {% for post in site.categories.astronomy limit:7 %}
                                     <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
                                 {% endfor %}
                             </ul>
