--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
+
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 		<title>{{ page.title }}</title>
 		<meta name="viewport" content="width=device-width">
 
-		<!-- syntax highlighting CSS -->
-		<link rel="stylesheet" href="/css/syntax.css">
+		<!-- Bootstrap -->
+		<link href="/css/bootstrap.min.css" rel="stylesheet">
 
-		<!-- Custom CSS -->
-		<link rel="stylesheet" href="/css/style.css">
+		<!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
+		<!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+		<!--[if lt IE 9]>
+		<script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
+		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
+		<![endif]-->
 
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -21,83 +26,44 @@
 		  ga('create', 'UA-10465388-1', 'robertlongbottom.com');
 		  ga('send', 'pageview');
 		</script>
+                <style>
+                   body { padding-top: 70px; }
+                </style>
 	</head>
+
     <body>
 
+      <!-- Static navbar -->
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <a class="navbar-brand" href="/">RobertLongbottom.com</a>
+          </div>
+          <div class="navbar-collapse collapse">
+            <ul class="nav navbar-nav">
+               <!--<li {% if page.url == "/electronics/index.html" %}class="active"{% endif %}><a href="/electronics">Electronics</a></li>-->
+               <li {% if page.url == "/astronomy/index.html" %}class="active"{% endif %}><a href="/astronomy">Astronomy</a></li>
+               <li {% if page.url == "/maths/index.html" %}class="active"{% endif %}><a href="/maths">Maths</a></li>
+               <li {% if page.url == "/about/index.html" %}class="active"{% endif %}><a href="/about">About</a></li>
+            </ul>
+          </div>
+        </div>
+      </div>
 
-<div id="wrapper">
-<!--
-	<div id="header-wrapper">
-		<div id="header">
-			<div id="logo">
-				<h1><a href="#">robertlongbottom.com</a></h1>
-				<p>Template Design by <a href="http://www.freecsstemplates.org/" rel="nofollow">FreeCSSTemplates.org</a></p>
-			</div>
-		</div>
-	</div>
--->
-	<!-- end #header -->
-	<div id="menu">
-		<ul>
-			<li {% if page.url == "/index.html" %}class="current_page_item"{% endif %}><a href="/">Home</a></li>
-			<li {% if page.url == "/maths/index.html" %}class="current_page_item"{% endif %}><a href="/maths">Maths</a></li>
-			<li {% if page.url == "/electronics/index.html" %}class="current_page_item"{% endif %}><a href="/electronics">Electronics</a></li>
-			<li {% if page.url == "/astronomy/index.html" %}class="current_page_item"{% endif %}><a href="/astronomy">Astronomy</a></li>
-			<li {% if page.url == "/about/index.html" %}class="current_page_item"{% endif %}><a href="/about">About</a></li>
-		</ul>
-	</div>
-	<!-- end #menu -->
-	<div id="page">
-		<div id="page-bgtop">
-			<div id="page-bgbtm">
-				<div id="content">
+      <div class="container">
+        {{ content }}
+      </div>
 
-					{{ content }}
-
-				</div>
-				<!-- end #content -->
-
-				<div id="sidebar">
-					<ul>
-						<li>
-							<h2>Maths</h2>
-                            <ul>
-                                {% for post in site.categories.maths limit:7 %}
-                                    <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-                                {% endfor %}
-							</ul>
-
-						</li>
-						<li>
-							<h2>Electronics</h2>
-							<ul>
-							    {% for post in site.categories.electronics %}
-							      <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-							    {% endfor %}
-							</ul>
-						</li>
-						<li>
-							<h2>Astronomy</h2>
-                            <ul>
-                                {% for post in site.categories.astronomy limit:7 %}
-                                    <li>&raquo; <a href="{{ post.url }}">{{ post.title }}</a></li>
-                                {% endfor %}
-                            </ul>
-						</li>
-					</ul>
-				</div>
-				<!-- end #sidebar -->
-				<div style="clear: both;">&nbsp;</div>
-			</div>
-		</div>
-	</div>
-	<!-- end #page --> 
-</div>
-<div id="footer">
-	<p>Copyright (c) robertlongbottom.com. All rights reserved.</p>
-</div>
-<!-- end #footer -->
-
+      <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+      <!-- Include all compiled plugins (below), or include individual files as needed -->
+      <script src="/scripts/bootstrap.min.js"></script>
 
     </body>
 </html>
