--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,7 @@
 		<script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
 		<![endif]-->
 
+		<!-- Google Analytics -->
 		<script>
 		  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 		  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -26,8 +27,18 @@
 		  ga('create', 'UA-10465388-1', 'robertlongbottom.com');
 		  ga('send', 'pageview');
 		</script>
+
+		<!-- Fonts -->
+		<link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+
                 <style>
                    body { padding-top: 70px; }
+		   h1, h2, h3, h4, h5, h6 {
+			    font-family: 'Open Sans', sans-serif;
+			}
+		   p, div {
+			    font-family: 'Open Sans', sans-serif;
+			}
                 </style>
 	</head>
 
